--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,17 @@
-title: Your awesome title
+title: Party Patil blog
 author:
-  name: GitHub User
-  email: your-email@domain.com
+  name: Anish Patil
+  email: anishpatil0307@gmail.com
 
 # The `>` after `description:` means to ignore line-breaks until next key.
 # If you want to omit the line-break after the end of text, use `>-` instead.
 description: >
-  Write an awesome description for your new site here. You can edit this line
-  in _config.yml. It will appear in your document head meta (for Google search
-  results) and in your feed.xml site description.
+  I do brownies>-
+  I do coke>-
+  I do quickies>-
+  All Halal, no Haram>-
+  Choco Brownies, Coke soda, HIIT quickies (This is the Haram version, hmu if interested M/F)>-
+  FULL PARTY HABIBI!~!~!~
 
 # Build settings
 
